[Client | NavBar] fix z-index conflict

--- a/client/src/Components/NavBar/NavBar.less
+++ b/client/src/Components/NavBar/NavBar.less
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 1rem;
+  z-index: var(--priority-layer);
 
   & .navbar-circle,
   .nav-select .nav-select__list {
