--- a/client/src/index.less
+++ b/client/src/index.less
@@ -2,12 +2,14 @@
   --navbar-color: #4E89BA;
   --bg-color: #84C1F8;
   --navbar-height: 50px;
+  --base-layer: 0;
+  --priority-layer: 50;
 }
 
 * {
   margin: 0;
   padding: 0;
-  z-index: 0;
+  position: relative;
   box-sizing: border-box;
 }
 
@@ -17,6 +19,7 @@ body {
   font-family: sans-serif;
   background: #84C1F8;
   color: black;
+  z-index: var(--base-layer);
 }
 
 html {
